--- a/src/app/pages/add-task/add-task.component.html
+++ b/src/app/pages/add-task/add-task.component.html
@@ -1,3 +1,27 @@
 <div>
   <button class="btn btn-warning" routerLink="/home">A casa</button>
+  <div class="alert alert-warning text-center fs-2">
+    Añade nuevas tareas, como si no tuvieras ya suficientes :D
+  </div>
+  <br>
+  <div class="container bg-body-secondary rounded-3">
+    <div class="col-auto ms-5 me-5">
+      <form (ngSubmit)="onSubmit(cardForm)" #cardForm="ngForm">
+        <div class="row g-4 mb-2 align-items-center">
+          <div class="col-12">
+            <label for="title" class="form-label">Descripción de la tarea </label>
+            <input type="text" class="form-control" name="title" #title [(ngModel)]="CardForm.title" id="title" required>
+          </div>
+          <div class="col-12">
+            <label for="completed" class="form-label">¿Tarea completada? </label>
+            <input type="checkbox" class="form-check-input" name="completed" #completed [(ngModel)]="CardForm.completed" id="completed" required>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary col-12 mb-5 mt-5">Submit</button>
+      </form>
+    </div>
+    <div class="text-danger fw-bold mb-3 fs-6">
+      TODOS los campos son obligatorios.
+    </div>
+  </div>
 </div>
